Implemented move function

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
         <br>
         <fieldset>
         <legend>TARGET</legend>
-            <input type="button" value="00-09" id="btn00">
-            <input type="button" value="10-19" id="btn10">
-            <input type="button" value="20-29" id="btn20">
+            <input type="button" value="00-09" id="btn00" data-index="0">
+            <input type="button" value="10-19" id="btn10" data-index="1">
+            <input type="button" value="20-29" id="btn20" data-index="2">
             <br>
-            <input type="button" value="30-39" id="btn30">
-            <input type="button" value="40-49" id="btn40">
-            <input type="button" value="50-59" id="btn50">
+            <input type="button" value="30-39" id="btn30" data-index="3">
+            <input type="button" value="40-49" id="btn40" data-index="4">
+            <input type="button" value="50-59" id="btn50" data-index="5">
             <br>
-            <input type="button" value="60-69" id="btn60">
-            <input type="button" value="70-79" id="btn70">
-            <input type="button" value="80-89" id="btn80">
+            <input type="button" value="60-69" id="btn60" data-index="6">
+            <input type="button" value="70-79" id="btn70" data-index="7">
+            <input type="button" value="80-89" id="btn80" data-index="8">
             <br>
-            <input type="button" value="90-99" id="btn90">
+            <input type="button" value="90-99" id="btn90" data-index="9">
             <br><br>  
-            <input type="button" value="RANDOM" id="btnRandom">
-            <input type="button" value="ALL" id="btnAll">
+            <input type="button" value="RANDOM" id="btnRandom" data-index="random">
+            <input type="button" value="ALL" id="btnAll" data-index="all">
         </fieldset> 
 
         <br>
@@ -74,7 +74,7 @@
         <h2>LINK</h2>
         <p><a href="https://masan-k.github.io/100Calcs/100calcs.html">100Calcs</a></p>
         <p><a href="https://masan-k.github.io/n-back/">n-back</a></p>
-        <p><a href="https://masan-k.github.io/num-image-conversion/">num-image-conversion</a></p>
+        <p><a href="https://masan-k.github.io/Memorization-of-muscles/index.html">Memorization-of-muscles</a></p>
 
         <script>
         </script>
