--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             }
         </style>
         <script type="text/javascript" src="index.js"></script>
+        <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
     </head>
     <body>
         <h1><LABEL id="lblTitle">num image conversion</LABEL></h1>
