--- a/test.html
+++ b/test.html
@@ -31,18 +31,33 @@
             }
         </style>
         <script type="text/javascript" src="test.js"></script>
+        <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
     </head>
     <body>
         <h1><LABEL id="lblTitle">TEST</LABEL></h1>
+	<p><input type="button" value="Start" id="btnStart"></p>
+
+        <p><LABEL id="lblStatus">this is Status</LABEL></p>
         <p>
-           <LABEL id="lblNumber">00</LABEL>
-           <input type="text" id="txtInput" size="5" maxlength="20">
+           <LABEL id="lblNumber">no-param</LABEL>
+           <input type="text" id="txtInput" size="20" maxlength="20">
         </p>
+	<p><LABEL id="lblWaitCount">this is waitCount</LABEL></p>
+	<p> 
+	<p> 
+	    <input type="button" value="Entry" id="btnEntry"> 
+	    <input type="button" value="Pass(Next)" id="btnPass"> 
+	</p> 
+	<p><input type="button" value="Menu" id="btnMenu"></p>
 
-        <input type="button" value="Submit" id="btnSubmit">
-        <input type="button" value="Next" id="btnNext">
+	<h2>RESULT</h2>
+	<p>[THE NUMBER OF QUESTIONS]</p>
+	<p><LABEL id="lblNumberQuestions">this is NumberQuestions</LABEL></p>
+	<p>[THE NUMBER OF CORRECT ANSWERS]</p>
+	<p><LABEL id='lblCorrectCount'>this is lblCorrectCount</LABEL></p>
+	<p>[WRONG PROBLEM]</p>
+	<p><LABEL id="lblMissAnswer">this is lblMissAnswer</LABEL</p>
 
-        <script>
-        </script>
+       
     </body>
 </html>
