--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
         <style>
           article, aside, dialog, figure, footer, header,
           hgroup, menu, nav, section { display: block; }
-            /*
-            html {
-                background-color: #555;
-            }
-            */
-            body {
+           body {
                 margin: 10px;
                 padding: 10px;
             }
@@ -39,8 +34,8 @@
         <fieldset>
         <legend>MODE</legend>
             <input type="radio" name="rdoMode" value="input" id="rdoInput"> input
-            <input type="radio" name="rdoMode" value="test" id="rdoTest"> test
-            <input type="radio" name="rdoMode" value="view" id="rdoView"> view
+            <input type="radio" name="rdoMode" value="test" id="rdoTest"> test　
+            <input type="button" value="view" id="btnView"> 
         </fieldset> 
         <br>
         <fieldset>
@@ -77,7 +72,5 @@
         <p><a href="https://masan-k.github.io/n-back/">n-back</a></p>
         <p><a href="https://masan-k.github.io/Memorization-of-muscles/index.html">Memorization-of-muscles</a></p>
 
-        <script>
-        </script>
     </body>
 </html>
