--- a/input.html
+++ b/input.html
@@ -9,25 +9,9 @@
         <style>
           article, aside, dialog, figure, footer, header,
           hgroup, menu, nav, section { display: block; }
-            /*
-            html {
-                background-color: #555;
-            }
-            */
             body {
                 margin: 10px;
                 padding: 10px;
-            }
-            #cvsCarrelation {
-                background-color: #FFF;
-                border: solid 0.1em;
-                border-color: #DDD;
-            }
-
-            #cvsLastYear {
-                background-color: #FFF;
-                border: solid 0.1em;
-                border-color: #DDD;
             }
         </style>
         <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
@@ -40,6 +24,8 @@
            <input type="text" id="txtInput" size="20" maxlength="20">
            <input type="button" value="Entry" id="btnEntry">
         </p>
+	<h2>TIPS</h2>
+	<p> - When registering multiple answers, enter "," between words. Example: word1, word2</p>
         <input type="button" value="Menu" id="btnMenu">
 
         <!--
