--- a/view.html
+++ b/view.html
@@ -30,6 +30,7 @@
     </head>
     <body>
         <h1><LABEL id="lblTitle">VIEW</LABEL></h1>
+        <p><input type="button" value="Menu" id="btnMenu"></p>
         <h2>REGISTERED DATA</h2>
     </body>
 </html>
