Addition of result display items

--- a/view.html
+++ b/view.html
@@ -31,6 +31,6 @@
     <body>
         <h1><LABEL id="lblTitle">VIEW</LABEL></h1>
         <p><input type="button" value="Menu" id="btnMenu"></p>
-        <h2>REGISTERED DATA</h2>
+        <h2>INPUT & TEST RECORD</h2>
     </body>
 </html>
