--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
             <br>
             <input type="button" value="90-99" id="btn90" data-index="9">
             <br><br>  
-            <input type="button" value="RANDOM" id="btnRandom" data-index="random">
-            <input type="button" value="ALL" id="btnAll" data-index="all">
+            <input type="button" value="RANDOM(Under maintenance)" id="btnRandom" data-index="random">
         </fieldset> 
 
         <br>
