Change mode initial display

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <fieldset>
         <legend>MODE</legend>
-            <input type="radio" name="rdoMode" value="input" id="rdoInput"> input
-            <input type="radio" name="rdoMode" value="test" id="rdoTest"> test　
-            <input type="button" value="view" id="btnView"> 
+            <input type="button" value="VIEW" id="btnView"> 
+            <input type="radio" name="rdoMode" value="test" id="rdoTest"> TEST　
+            <input type="radio" name="rdoMode" value="input" id="rdoInput"> INPUT
         </fieldset> 
         <br>
         <fieldset>
