--- a/input.html
+++ b/input.html
@@ -25,7 +25,8 @@
            <input type="button" value="Entry" id="btnEntry">
         </p>
 	<h2>TIPS</h2>
-	<p> - When registering multiple answers, enter "," between words. Example: word1, word2</p>
+	<p> - When registering multiple answers, enter "," between words. Example:[word1, word2]</p>
+	<p> - It will be saved when all the input of the target range is completed.</p>
         <input type="button" value="Menu" id="btnMenu">
 
         <!--
