Specification change of summary record

--- a/view.html
+++ b/view.html
@@ -32,5 +32,8 @@
         <h1><LABEL id="lblTitle">VIEW</LABEL></h1>
         <p><input type="button" value="Menu" id="btnMenu"></p>
         <h2>INPUT & TEST RECORD</h2>
+	<div id='viewTable'></div>
+	<h2>TIPS</h2>
+	<p>- The records to be aggregated (latest, average, highest, lowest) are for the last 3 times.</p>
     </body>
 </html>
