--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <br>
             <input type="button" value="90-99" id="btn90" data-index="9">
             <br><br>  
-            <input type="button" value="RANDOM(Under maintenance)" id="btnRandom" data-index="random">
+            <input type="button" value="RANDOM 30" id="btnRandom" data-index="random,30">
         </fieldset> 
 
         <br>
