Add shortcut key

--- a/test.html
+++ b/test.html
@@ -56,7 +56,8 @@
 	<p><LABEL id='lblCorrectCount'>this is lblCorrectCount</LABEL></p>
 	<p>[WRONG PROBLEM]</p>
 	<p><LABEL id="lblMissAnswer">this is lblMissAnswer</LABEL</p>
-
+	<p>space key: start button click</p>
+	<p>tab key: menu button click</p>
        
     </body>
 </html>
