change short cut key

--- a/test.html
+++ b/test.html
@@ -56,8 +56,7 @@
 	<p><LABEL id='lblCorrectCount'>this is lblCorrectCount</LABEL></p>
 	<p>[WRONG PROBLEM]</p>
 	<p><LABEL id="lblMissAnswer">this is lblMissAnswer</LABEL</p>
-	<p>space key: start button click</p>
+	<p>ctrl key: start button click</p>
 	<p>tab key: menu button click</p>
-       
-    </body>
+  </body>
 </html>
