--- a/www/view.html
+++ b/www/view.html
@@ -2,36 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>num image conversion</title>
+        <title>NUM IMAGE CONVERSION</title>
         <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-        <style>
-	    article, aside, dialog, figure, footer, header,
-	    hgroup, menu, nav, section { display: block; }
-	    body {
-		margin: 10px;
-                padding: 10px;
-	    }
-	    
-	    table,td {
-		border: 1px solid #000;
-	    }
 
-	    thead{
-		background-color: #333;
-		color: #fff;
-	    }
-
-        </style>
-
+        <link rel="stylesheet" href="style.css">
         <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
         <script type="text/javascript" src="view.js"></script>
     </head>
     <body>
         <h1><LABEL id="lblTitle">VIEW</LABEL></h1>
-        <p><input type="button" value="Menu" id="btnMenu"></p>
-        <h2>INPUT & TEST RECORD</h2>
+        <p><input class="button-primary button-fill" type="button" value="Menu" id="btnMenu"></p>
 	<div id='viewTable'></div>
 	<h2>TIPS</h2>
 	<p>- The records to be aggregated (latest, average, highest, lowest) are for the last 3 times.</p>
