text input ui update

--- a/www/test.html
+++ b/www/test.html
@@ -18,7 +18,7 @@
         <p><LABEL id="lblStatus">this is Status</LABEL></p>
         <p>
            <LABEL id="lblNumber">no-param</LABEL>
-           <input class="input-primary" type="text" id="txtInput" size="25" maxlength="25" placeholder="Please enter the registered word">
+           <input class="input-primary" type="text" id="txtInput" size="25" maxlength="25" placeholder="Please enter the registered word.">
            <input class="button-primary button-fill" type="button" value="Entry" id="btnEntry">
         </p>
 	<p><LABEL id="lblWaitCount">this is waitCount</LABEL></p>
