--- a/www/input.html
+++ b/www/input.html
@@ -14,7 +14,7 @@
         <h1><LABEL id="lblTitle">INPUT</LABEL></h1>
         <p>
            <LABEL id="lblNumber">lblNumber</LABEL>
-           <input type="text" id="txtInput" size="20" maxlength="20">
+           <input class="input-primary" type="text" id="txtInput" size="20" maxlength="20" placeholder="Please enter associative words for numbers.">
            <input class="button-primary button-fill" type="button" value="Entry" id="btnEntry">
         </p>
 	<h2>TIPS</h2>
