--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1>NUM IMAGE CONVERSION</h1>
-    <div class="radio-buttons">
+    <div class="radio-buttons no-caret">
       <input type="radio" name="rdoMode" value="test" id="rdoTest">
       <label for="rdoTest">TEST</label>
       <input type="radio" name="rdoMode" value="input" id="rdoInput"></label>
@@ -43,7 +43,7 @@
 
     <h2>LINK</h2>
     <ul>
-      <li><a href="https://masan-k.github.io/100Calcs/100calcs.html">100Calcs</a></li>
+      <li><a href="https://masan-k.github.io/100Calcs/pc/100calcs.html">100Calcs</a></li>
       <li><a href="https://masan-k.github.io/n-back/">n-back</a></li>
     </ul>
 
