--- a/www/input.html
+++ b/www/input.html
@@ -15,8 +15,8 @@
     <h1><LABEL id="lblTitle">INPUT</LABEL></h1>
     <p>
       <LABEL id="lblNumber">lblNumber</LABEL>
-      <input class="input-primary" type="text" id="txtInput" size="100" maxlength="100" placeholder="Please enter associative words for numbers."><br><br>
-      <input class="button-primary button-fill" type="button" value="Entry" id="btnEntry">
+      <input class="input-primary" type="text" id="txtInput"  size="100" maxlength="100" placeholder="Please enter associative words for numbers."><br><br>
+      <button class="button-primary button-fill" id="btnEntry">Entry</button>
     </p>
     <h2>TIPS</h2>
     <p> - When registering multiple answers, enter "," between words. Example:[word1, word2]</p>
